alles bis auf Diskussion und H2

--- a/2 Theorie/2.2.2 Hypothese 2.tex
+++ b/2 Theorie/2.2.2 Hypothese 2.tex
@@ -1,7 +1,7 @@
 \subsection{Hypothese 2}    \label{subsec_2.2.2}
 Die Studie von \textcite{H2_u_3_Bhogal_2016} zeigt, dass körperliche Aggression einen signifikanten Einfluss auf die Akzeptanz von Vergewaltigungsmythen hat. Diese Studie wird untersuchen, ob Aggression im Allgemeinen auch ein gültiger Prädiktor für die Akzeptanz von Gewaltmythen im Allgemeinen ist.
 
-Bei der Untersuchung der möglichen moderierenden Rolle der Toleranz$-$Subskala Neuheit zwischen häuslicher Gewalt und aggression kamen \textcite{H1_moderation_2020} zur Erkenntnis, dass die Akzeptanz von Gewaltmythen ein signifikanter Prediktor von Aggression ist ($\beta$~=~.734, $p<$ .01)
+Bei der Untersuchung der möglichen moderierenden Rolle der Toleranz$-$Subskala Neuheit zwischen häuslicher Gewalt und Aggression kamen \textcite{H1_moderation_2020} zur Erkenntnis, dass die Akzeptanz von Gewaltmythen ein signifikanter Prediktor von Aggression ist ($\beta$~=~.734, $p<$ .01).
 
 Aufgrund von QUELLEN wird folgende Hypothese abgeleitet: Die Aggression korreliert positiv mit der Akzeptanz von Gewaltmythen.
 
