--- a/2 Theorie/2.2.3 Hypothese 3.tex
+++ b/2 Theorie/2.2.3 Hypothese 3.tex
@@ -1,8 +1,10 @@
 \subsection{Hypothese 3}    \label{subsec_2.2.3}
-The results from a study conducted by \textcite{H2_u_3_Bhogal_2016} showed that males had a higher acceptance of rape myths. Furthermore, it was reported that men displayed a higher level of self-reported physical aggression. It is therefore plausible to assume that men with a higher propensity for aggression have a higher acceptance of violence myths in general.
+\textcite{H2_u_3_Bhogal_2016} untersuchten in ihrer Studie 121 Studierende auf ihre Akzeptanz von Vergewaltigungsmythen und ihre Aggression in Form von physischer und verbaler Aggression, Ärger und Misstrauen. Sie kamen zum Entschluss, dass Männer eine höhere Akzeptanz von Vergewaltigungsmythen haben. Diese Mythen stellen die, meist weiblichen, als Mitschuldie da. Diese sichtweise des Opfers ist im Einklang mit den Mythen von häuslicher Gewalt. Ein weiteres Ergebnis der Untersuchung von \textcite{H2_u_3_Bhogal_2016} war, dass die physische Aggression bei Männern signifikant höher ist, verglichen mit den Frauen.
 
-Laut \textcite{H3_MFUnterschied} sind Feministen der Meinung, dass Frauen ihre Aggressivität unterdrücken, gleichzeitig sind biologisch Positionierte der Auffassung, dass Frauen nicht die gleichen Fähigkeiten bzw. nicht das gleiche Bedürfniss haben, zu reagieren wie Männer. Eine weitere Erklärung geht davon aus, dass Frauen das selbe biologische Potenzial für Aggressivität aufweisen, aber die Gesellschaft solch ein Verhalten ausschließlich bei Männern fördert. Die Verhaltensbiologie betrachtend, sind Männchen auf Grund von Testostron aggressiver als Weibchen. Obwohl Artenübergreifende Vergleiche mit Obhut zu genießen sind, bietet diese Tatsache einen starken Anhaltspunkt für einen Geschlechterunterschied menschlicher Aggressivität.
+Laut \textcite{H3_MFUnterschied} sind Feministen der Meinung, dass Frauen ihre Aggressivität unterdrücken, gleichzeitig sind biologisch Positionierte der Auffassung, dass Frauen nicht die gleichen Fähigkeiten bzw. nicht das gleiche Bedürfniss haben, zu reagieren, so wie Männer es haben. Eine weitere Erklärung geht davon aus, dass Frauen das selbe biologische Potenzial für Aggressivität aufweisen, aber die Gesellschaft solch ein Verhalten ausschließlich bei Männern fördert. Die Verhaltensbiologie betrachtend, sind Männchen auf Grund von Testostron aggressiver als Weibchen. Obwohl Artenübergreifende Vergleiche mit Obhut zu genießen sind, bietet diese Tatsache einen starken Anhaltspunkt für einen Geschlechterunterschied menschlicher Aggressivität.
 
-Aufgrund von QUELLEN wird folgende Hypothese abgeleitet: Der Zusammenhang zwischen Akzeptanz von Gewaltmythen und Aggression wird durch das Geschlecht moderiert.
+Im Rahmen einer Studie von $N$~=~329 Probanden zwischen 15 und 19 Jahren untersuchten \textcite{H3_2020} die Existenz sexualisierter Gewalt in romantischen Beziehungen, mögliche Zusammenhänge zwischen Mythen über sexualisierte Aggression und sexualisiertes Durchsetzungsvermögen und ihre möglichen geschlechterspezifischen Unterschiede. Ihre Ergebnisse zeigen, dass die männlichen Jugendlichen häufiger Täter sexualisierter Gewalt waren, und dass die männlichen Probanden vermehrt Mythen über sexualisierte Aggression Glauben schenkten. Das behandelte Thema des verwendeten Fragebogens ähnelt denen des DVMAS.
+
+Aufgrund von \textcite{H2_u_3_Bhogal_2016, H3_MFUnterschied, H3_2020} liegt die Vermutung nahe, dass das Geschecht der Probanden eine moderierenden Rolle im Zusammenhang zwischen Akzeptanz von Gewaltmythen und Aggression hat. Aus diesem Gedanke ergibt sich die folgende Hypothese: Der Zusammenhang zwischen Akzeptanz von Gewaltmythen und Aggression wird durch das Geschlecht moderiert.
 
 % Durch die in Kapitel 1.4 jeweiligen Studien von Haj-Yahia (2003), McElligott (2011), George und Martínez (2002) und Acosved und Long (2006) liegt der Gedanken nahe, dass der kulturelle Hintergrund der Betroffenen Auswirkungen auf die Wahrnehmung und daraus resultierende Verantwortungszuschreibung der Gesellschaft hat. Daraus ergibt sich die gerichtete Unterschiedshypothese:
