--- a/3 Methode/Histogramm Altersverteilung.tex
+++ b/3 Methode/Histogramm Altersverteilung.tex
@@ -1,6 +1,6 @@
 \begin{figure}[htb]
     \centering
-        \includegraphics[width=0.8\linewidth]{Histogramm - Altersverteilung.png}
+        \includegraphics[width=0.8\linewidth]{Histogramm Alter.jpg}
         \caption[Histogramm Altersverteilung]{Verteilung des Alters.}
         \label{Histogramm Altersverteilung}
 \end{figure}
