--- a/4 Ergebnisse/Histogramm AggroFB.tex
+++ b/4 Ergebnisse/Histogramm AggroFB.tex
@@ -1,6 +1,6 @@
 \begin{figure}[htb!]
     \centering
-        \includegraphics[width=0.8\linewidth]{Histogramm - AggroFB.png}
+        \includegraphics[width=0.8\linewidth]{Histogramm AggroFB.jpg}
         \caption[Histogramm Aggressionsfragebogen]{Verteilung der Angaben des Aggressionsfragebogens.}
         \label{Histogramm AggroFB}
 \end{figure}
