--- a/4 Ergebnisse/Histogramm DVMAS.tex
+++ b/4 Ergebnisse/Histogramm DVMAS.tex
@@ -1,6 +1,6 @@
 \begin{figure}[htb]
     \centering
-        \includegraphics[width=0.8\linewidth]{Histogramm - DVMAS.png}
+        \includegraphics[width=0.8\linewidth]{Histogramm DVMAS.jpg}
         \caption[Histogramm DVMAS]{Verteilung der Akzeptanz von Gewaltmythen.}
         \label{Histogramm DVMAS}
 \end{figure}
