--- a/4 Ergebnisse/Histogramm Vignetten.tex
+++ b/4 Ergebnisse/Histogramm Vignetten.tex
@@ -1,6 +1,6 @@
 \begin{figure}[htb]
     \centering
-        \includegraphics[width=0.8\linewidth]{Histogramm - VicBlame.png}
+        \includegraphics[width=0.8\linewidth]{Histogramm VicBlame.jpg}
         \caption[Histogramm Verantwortungszuschreibung]{Verteilung der Verantwortungszuschreibung.}
         \label{Histogramm VicBlame}
 \end{figure}
