--- a/4 Ergebnisse/Tabelle H1 Spearman.tex
+++ b/4 Ergebnisse/Tabelle H1 Spearman.tex
@@ -9,13 +9,13 @@
         & $M$   & $SD$ & 1 \\
       \hline
     Aggression      & 1.88  & 0.43   & $-$      \\
-    victim blaming  & 26.46 & 27.98  & .088      \\
+    victim blaming  & 26.46 & 27.98  & .064      \\
        \hline
     \end{tabular}
     \end{adjustbox}
     
     \begin{tablenotes}
-        \item \textit{Anmerkungen.} \( N \) = 864; Wertebereich der Variable Aggression 1 (\textit{trifft nicht zu}) bis 4 (\textit{trifft voll zu}); Spearman$-$Rang$-$Korrelation.
+        \item \textit{Anmerkungen.} \( N \) = 864; Wertebereich der Variable Aggression 1 (\textit{trifft nicht zu}) bis 4 (\textit{trifft voll zu}); Pearson$-$Produkt$-$Moment$-$Korrelation.
       \end{tablenotes}
     \end{table}
 
