--- a/5 Diskussion/Diskussion.tex
+++ b/5 Diskussion/Diskussion.tex
@@ -1,5 +1,5 @@
 \chapter{Diskussion}   \label{ch_5}
-Der abschließende Diskussionskapitel beginnt mit einer Zusammenhang der zentralen Ergebnisse. Daraufhin folgt die Interpretation dieser und die Einordnung in den aktuellen wissenschaftlichen Forschungsstand. Im folgenden Zug werden die verwendeten Methoden Bewertet. Die Arbeit endet mit theoretischen und oder praktischen Implikationen für die zukünftige Forschung.
+Der abschließende Diskussionskapitel beginnt mit einer Zusammenfassung der zentralen Ergebnisse. Daraufhin folgt die Interpretation dieser und die Einordnung in den aktuellen wissenschaftlichen Forschungsstand. Im folgenden Zug werden die verwendeten Methoden bewertet. Die Arbeit endet mit theoretischen und oder praktischen Implikationen für die zukünftige Forschung.
 
 
 \section{Zusammenfassung der zentralen Ergebnisse}  \label{sec_5.1}
@@ -7,11 +7,14 @@ Ergebnisse und ihre Implikation für die Gültigkeit der empirischen Hypothesen 
 
 
 \section{Einordnung und Diskussion der Befunde}     \label{sec_5.2}
-dd
+%Ergebnis explorativ letztes
+%Auch die explorative Untersuchung der Differenz zwischen den biologischen Geschlechtern in Anbetracht der Aggression, wurde mithilfe des t-Tests für unabhängige Stichproben getestet. Der Levene Test fiel mit $F$~5.715 signifikant aus. Das bedeutet, dass durch die Varianzunterschiede es zu falsche Schlüsse aus dem t-Test kommen kann.
+%Der Unterschied zwischen Männern und Frauen war signifikant ($t$(433.64)~=~2.18, $p$~=~.0.30). Die Aggression war bei Männern durchschnittlich 0.07 Einhaeiten niedriger (95\%$-$CI[0.01, 0.14]).
 
 
 \section{Bewertung der Methode}
 Möglische Kritikpunkte der durchgeführten Studie    \label{sec_5.3}
+soziale Erwünschtheit: durch Reihenfolge der Fragebögen
 
 
 \section{Ausblick}
