--- a/Quellen.bib
+++ b/Quellen.bib
@@ -226,7 +226,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 @inbook{H3_MFUnterschied,
   author         = {Frost, W. D. and Averill, J. R.},
   chapter        = {Differences Betweem Men and Women in the Everyay Experience of Anger},
-  pages          = {281--317},
+  pages          = {281-317},
   publisher      = {Springer Verlag New York Inc.},
   title          = {Anger and Aggression: An Essay on Emotion},
   year           = {1982}
@@ -337,7 +337,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
   edition        = {6},
 }
 
-@inbook{physische_Gewalt_wie_aggro,
+@incollection{physische_Gewalt_wie_aggro,
   author         = {Brzank, P.},
   chapter        = {Gewalt gegen Frauen: eine theoretische Verortung},
   pages          = {32},
@@ -352,7 +352,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
   author         = {Gerlach, K.},
   chapter        = {Häusliche Gewalt: Definition},
   editor         = {Grassberger, M. and Türk, E. and Yen, K.},
-  pages          = {228--242},
+  pages          = {228-242},
   publisher      = {Berlin Heidelberg: Springer-Verlag},
   title          = {Klinisch-forensische Medizin},
   year           = {2013}
@@ -430,8 +430,8 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 }
 
 @techreport{Ursache_hG_2,
-  author      = {Agger, T. and Schär Moser, M.},
-  institution = {Eidgenössisches Büro fr die Gleichstellung von Frau und Mann EBG},
+  author      = {Egger, T. and Schär Moser, M.},
+  institution = {Eidgenössisches Büro fr die Gleichstellung von Frau und Mann},
   title       = {Gewalt in Paarbeziehungen. Ursachen und in der Schweiz getroffene Massnahmen},
   year        = {2008}
 }
@@ -460,11 +460,10 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 @article{Labelingtheory_plus,
   author          = {Policastro, C. and Payne, B. K.},
   journal         = {Journal of Aggression, Maltreatment \& Trauma},
-  number          = {4},
   title           = {The Blameworthy Victim: Domestic Violence Myths and the Criminalization of Victimhood},
   volume          = {22},
   year            = {2013},
-  pages           = {329--347},
+  pages           = {329-347},
   doi             = {10.1080/10926771.2013.775985},
 }
 
@@ -537,7 +536,6 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 @article{H2_u_3_Bhogal_2016,
   author          = {Bhogal, M.S. and Corbertt, S. },
   journal         = {Psychiatry, Psychology and Law},
-  number          = {5},
   title           = {The Influence of Aggressiveness on Rape-Myth Acceptance among University Students},
   volume          = {23},
   year            = {2016},
@@ -555,12 +553,11 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 @article{H1_1993,
   author          = {Gray, N.B. and Palileo, G.J. and Johnson, G.D.},
   journal         = {Sociological Spectrum},
-  number          = {4},
   title           = {Explaining rape victim blame: A test of attribution theory},
   volume          = {13},
   year            = {1993},
   pages           = {377-392},
-  doi             = {10.1080/02732173.1993.9982040 },
+  doi             = {10.1080/02732173.1993.9982040},
 }
 
 @misc{H1_Poli_2022,
@@ -580,7 +577,6 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 @article{Cohen_1992,
   author          = {Cohen, J.},
   journal         = {Psychological Bulletin},
-  number          = {1},
   title           = {A Power Primer},
   volume          = {112},
   year            = {1992},
@@ -597,10 +593,37 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 
 @inbook{H1_Entwicklung,
   author         = {Silbereisen, R. K. and Weichold, K.},
-  chapter        = {Jugend (12-19 Jahre},
+  chapter        = {Jugend (12-19 Jahre)},
   editor         = {Schneider, W. and Lindenberger, U. (Hrsg.},
   pages          = {235-258},
   publisher      = {Weinheim: Beltz},
   title          = {Entwicklungspsychologie},
   year           = {2012}
+}
+
+@article{H3_2020,
+  author          = {Fernández-Fuertes, A. A. and Fernández-Rouco, N. and Lázaro-Visa, S. and Gómez-Pérez, E.},
+  journal         = {International Journal of Environmental Research and Public Health},
+  number          = {8744},
+  title           = {Myths about Sexual Aggression, Sexual Assertiveness and Sexual Violence in Adolescent Romantic Relationships},
+  volume          = {17},
+  pages           = {1-13},
+  year            = {2020}
+}
+
+@misc{Voraussetzung_Moderation,
+    title    = {StatistikGuru},
+    subtitle = {Homoskedastizität},
+    year     = {2016},
+    url      = {https://statistikguru.de/lexikon/homoskedastizitaet.html},
+    author   = {Hemmerich, Wanja A.}
+}
+
+@book{Moderation_SPSS,
+  author         = {Hayes, A. F.},
+  publisher      = {Guilford Press},
+  title          = {Introduction to Mediation, Moderation, and Conditional Process Analysis},
+  pages          = {237},
+  edition        = {2},
+  year           = {2018}
 }
