--- a/SRH_Vorlage.sty
+++ b/SRH_Vorlage.sty
@@ -87,10 +87,7 @@
 \usepackage{chngcntr}   % change the resetting of counters
 \counterwithout{table}{chapter}
 \counterwithout{figure}{chapter}
-\usepackage[labelsep=period, singlelinecheck=false]{caption}   % trennt "Tabelle" 
-% und Überschrift durch einen Punkt an Stelle von einem Doppeltpunkt (nach DGPs nur
-% getrennt durch Leerzeichen --> "space" statt "period") + right 
-% align caption
+\usepackage[labelsep=period, singlelinecheck=false]{caption}   % trennt "Tabelle" und Überschrift durch einen Punkt an Stelle von einem Doppeltpunkt (nach DGPs nur getrennt durch Leerzeichen --> "space" statt "period") + right align caption
 \captionsetup[figure]{labelfont=it}
 %\usepackage[format=plain,labelfont=it]{caption}
 \captionsetup[table]{aboveskip=6pt}  % adjust distance between caption and float 
