--- a/SRH_Vorlage.tex
+++ b/SRH_Vorlage.tex
@@ -36,6 +36,7 @@
 \usepackage{tabu}
 \usepackage{longtable}
 \usepackage{tabularx}
+\usepackage{siunitx}
 % Abbildungen:
 \usepackage{graphicx}
 \usepackage{subcaption}   % environment allows you to place multiple images at a 
